# DGP_2025

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  analysis.md  configure.py  requirements.txt
source/Core/RHI/: CMakeLists.txt  nvrtc.cmake
source/Core/RHI/include/RHI/: api.h  rhi.hpp
source/Core/RHI/include/RHI/DeviceManager/: DeviceManager.h
source/Core/RHI/include/RHI/Hgi/: desc_conversion.hpp  format_conversion.hpp
source/Core/RHI/include/RHI/ResourceManager/: resource_allocator.hpp
source/Core/RHI/include/RHI/ShaderFactory/: shader.hpp  shader_reflection.hpp
source/Core/RHI/include/RHI/internal/: cuda_extension.hpp  cuda_extension_utils.h  nvrhi_equality.hpp  nvrhi_hash.hpp  nvrhi_patch.hpp  nvrhi_sizes.hpp  resources.hpp
source/Core/RHI/include/RHI/internal/optix/: ShaderNameAbbre.h  WorkQueue.cuh
source/Core/RHI/python/: rhi.cpp
source/Core/RHI/source/: DeviceManager.cpp  DeviceManager_DX12.cpp  DeviceManager_VK.cpp  cuda_extension.cpp  cuda_extension.cu  nvrtc_config.h.in  rhi.cpp  shader.cpp  shaderCompiler.cpp  shaderCompiler.h  shader_reflection.cpp
source/Core/RHI/tests/: cpu_slang.cpp  cuda_extension.cpp  rhi.cpp  thrust.cu
source/Runtime/renderer/: CMakeLists.txt
source/Runtime/renderer/include/hd_USTC_CG/: render_global_payload.hpp
source/Runtime/renderer/nodes/: accumulate.cpp  automatic_tonemapper.cpp  miss_sky.cpp  node_dynamic_socket.cpp  node_node_render_ray_generation.cpp  node_render_blit_to_present.cpp  node_render_camera_info.cpp  node_render_create_empty_texture.cpp  node_render_environment_pass.cpp  node_render_material_eval_sample_pdf.cpp  node_render_motion_vec.cpp  node_render_present.cpp  node_render_print_debug.cpp  node_render_rasterize.cpp  node_render_ray_launch.cpp  node_render_rayleigh_sommerfeld.cpp  node_render_rng_buffer.cpp  node_render_rng_texture.cpp  node_render_scatter_contribution.cpp  node_render_shadertoy.cpp  node_render_shadow_mapping.cpp  node_render_ssao.cpp  node_render_taa.cpp  node_render_transparent_refraction.cpp  node_test_socket.cpp  render_node_base.h  tome_mapping.cpp  translation_orientation_to_transforms.cpp
source/Runtime/renderer/nodes/scripts/: 4dgs_decoder.py  Empty_NumpyArray.py  Empty_Tensor.py  event4DGS_process.py  foo_model.py  get_rays.py  python_cam.py  read_model.py
source/Runtime/renderer/nodes/scripts/data/: data_structures.py
source/Runtime/renderer/nodes/shaders/shaders/: accumulate.slang  add_scatter.slang  atomic_scatter.slang  material_eval_sample_pdf.slang  physical_lens_raygen.slang  physical_lens_raygen_cpu.slang  physical_lens_raygen_torch.slang  rasterize.slang  ray_launch.slang  raygen.slang  tonemapper.slang  translation_orientation_to_transforms.slang
source/Runtime/renderer/nodes/shaders/shaders/Core/: AssetResolver.h  Enum.h  Error.h  HotReloadFlags.h  Macros.h  Object.h  ObjectPython.h  Plugin.h
source/Runtime/renderer/nodes/shaders/shaders/DiffRendering/: AggregateGradients.cs.slang  DiffSceneIO.slang  DiffSceneQuery.slang  SceneGradients.h  SceneGradients.slang  SharedTypes.slang
source/Runtime/renderer/nodes/shaders/shaders/OptiX/: OptiXConfig.h  OptikaUtils.h  ShadeLineElement.cuh  Utils.h  bsdf.h  drjit_lineshade.h  line_special_shading.cuh  material.h  random.h  vec_math.h
source/Runtime/renderer/nodes/shaders/shaders/Scene/: BindlessVertexBuffer.slang  HitInfo.h  HitInfoType.slang  IScene.h  Importer.h  ImporterError.h  Raytracing.slang  Scene.slang  SceneBuilder.h  SceneBuilderDump.h  SceneCache.h  SceneDefines.slangh  SceneIDs.h  SceneTypes.slang  Transform.h  TriangleMesh.h  VertexAttrib.slangh  VertexData.slang
source/Runtime/renderer/nodes/utils/: cam_to_view_contants.h  math.h  python_conversion.hpp  resource_cleaner.hpp
source/Runtime/renderer/resources/: plugInfo.json  test_options.mtlx
source/Runtime/renderer/resources/libraries/lights/: lights_defs.mtlx
source/Runtime/renderer/resources/libraries/targets/: genslang.mtlx
source/Runtime/renderer/source/: DescriptorTableManager.cpp  DescriptorTableManager.h  api.h  camera.cpp  camera.h  config.cpp  config.h  instancer.cpp  instancer.h  light.cpp  light.h  node_exec_eager_render.cpp  node_exec_eager_render.hpp  renderBuffer.cpp  renderBuffer.h  renderDelegate.cpp  renderDelegate.h  renderParam.h  renderPass.cpp  renderPass.h  renderTLAS.cpp  renderTLAS.h  renderer.cpp  renderer.h  rendererPlugin.cpp  rendererPlugin.h  resource_allocator_instance.cpp  sampler.cpp  sampler.h
source/Runtime/renderer/source/geometries/: mesh.cpp  mesh.h
source/Runtime/renderer/source/internal/memory/: DeviceMemoryPool.cpp  DeviceMemoryPool.hpp
source/Runtime/renderer/source/material/: material.cpp  material.h  materialFilter.cpp  materialFilter.h
source/Runtime/renderer/source/material/MaterialX/: Export.h  SlangResourceBindingContext.cpp  SlangResourceBindingContext.h  SlangShaderGenerator.cpp  SlangShaderGenerator.h  SlangSyntax.cpp  SlangSyntax.h  VkResourceBindingContext.cpp  VkResourceBindingContext.h  VkShaderGenerator.cpp  VkShaderGenerator.h  VkSyntax.cpp  VkSyntax.h
source/Runtime/renderer/source/renderer/: CMakeLists.txt  compute_context.cpp  compute_context.hpp  context.cpp  context.hpp  graphics_context.cpp  graphics_context.hpp  neural_importance_sampler.cpp  program_vars.cpp  program_vars.hpp  raytracing_context.cpp  raytracing_context.hpp
source/Runtime/renderer/tests/: device_object_pool.cpp  mtlx.cpp  slang_tester.hpp
(+725 files in other folders)
